--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -98,8 +98,8 @@ jobs:
           cache-to: type=gha,mode=max
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
-          build-args: DIND_BASE_IMAGE="docker.io/library/docker:dind"
           file: docker/dind-${{ matrix.dockerfile }}.dockerfile
+          build-args: DIND_BASE_IMAGE=docker.io/library/docker:dind
           platforms: linux/amd64,linux/arm64,linux/arm/v7,linux/arm/v6
 
   docker-engine-tests:
