--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -117,6 +117,8 @@ jobs:
       - uses: actions/checkout@v4
       - uses: douglascamata/setup-docker-macos-action@v1-alpha.13
         if: startsWith(matrix.os, 'macos')
+      - uses: ./.github/actions/windows-wsl2
+        if: startsWith(matrix.os, 'windows')
       - uses: docker/login-action@v3
         with:
           registry: ghcr.io
