--- a/package.json
+++ b/package.json
@@ -50,29 +50,28 @@
         "@babel/plugin-transform-export-namespace-from": "7.24.7",
         "@babel/plugin-transform-modules-commonjs": "7.24.8",
         "@effect/build-utils": "0.7.7",
-        "@effect/cli": "0.39.2",
+        "@effect/cli": "0.39.3",
         "@effect/docgen": "0.4.3",
         "@effect/eslint-plugin": "0.2.0",
-        "@effect/experimental": "0.20.3",
+        "@effect/experimental": "0.20.4",
         "@effect/language-service": "0.1.0",
-        "@effect/platform": "0.60.2",
-        "@effect/platform-browser": "0.39.2",
-        "@effect/platform-node": "0.55.2",
-        "@effect/printer": "0.33.51",
-        "@effect/printer-ansi": "0.33.51",
-        "@effect/schema": "0.69.2",
-        "@effect/typeclass": "0.24.51",
-        "@effect/vitest": "0.6.12",
-        "@rollup/wasm-node": "4.19.0",
+        "@effect/platform": "0.60.3",
+        "@effect/platform-browser": "0.39.3",
+        "@effect/platform-node": "0.55.3",
+        "@effect/printer": "0.33.52",
+        "@effect/printer-ansi": "0.33.52",
+        "@effect/schema": "0.69.3",
+        "@effect/typeclass": "0.24.52",
+        "@effect/vitest": "0.7.0",
         "@types/node": "22.0.0",
         "@types/ssh2": "1.15.0",
         "@types/tar-fs": "2.0.4",
         "@typescript-eslint/eslint-plugin": "7.18.0",
         "@typescript-eslint/parser": "7.18.0",
         "@typescript-eslint/utils": "7.18.0",
-        "@vitest/coverage-v8": "1.6.0",
+        "@vitest/coverage-v8": "2.0.4",
         "babel-plugin-annotate-pure-calls": "0.4.0",
-        "effect": "3.5.8",
+        "effect": "3.5.9",
         "eslint": "8.57.0",
         "eslint-config-prettier": "9.1.0",
         "eslint-import-resolver-typescript": "3.6.1",
@@ -89,18 +88,17 @@
         "tsx": "4.16.2",
         "typescript": "5.5.4",
         "vite": "5.3.5",
-        "vitest": "1.6.0",
-        "ws": "8.18.0"
+        "vitest": "2.0.4"
     },
     "peerDependencies": {
-        "@effect/experimental": "0.20.3",
-        "@effect/platform": "0.60.2",
-        "@effect/schema": "0.69.2",
-        "effect": "3.5.8"
+        "@effect/experimental": "0.20.4",
+        "@effect/platform": "0.60.3",
+        "@effect/schema": "0.69.3",
+        "effect": "3.5.9"
     },
     "optionalDependencies": {
-        "@effect/platform-browser": "0.39.2",
-        "@effect/platform-node": "0.55.2",
+        "@effect/platform-browser": "0.39.3",
+        "@effect/platform-node": "0.55.3",
         "ssh2": "^1.15.0",
         "tar-fs": "^3.0.6",
         "undici": "^6.19.4"
