--- a/.github/actions/windows-wsl2/action.yml
+++ b/.github/actions/windows-wsl2/action.yml
@@ -15,7 +15,7 @@ runs:
     - shell: pwsh
       run: Invoke-WebRequest -URI https://wslstorestorage.blob.core.windows.net/wslblob/wsl_update_x64.msi -OutFile wsl_update_x64.msi
     - shell: pwsh
-      run: Start-Process -Wait -FilePath msiexec -ArgumentList /i, wsl_update_x64.msi
+      run: msiexec /i wsl_update_x64.msi /norestart
     - shell: pwsh
       run: Invoke-WebRequest -URI https://cloud-images.ubuntu.com/releases/jammy/release/ubuntu-22.04-server-cloudimg-amd64-root.tar.xz -OutFile jammy-server-cloudimg-amd64-root.tar.xz
     - shell: pwsh
