--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -57,6 +57,7 @@
         "leonitousconforti",
         "libnetwork",
         "memswap",
+        "Millis",
         "moby",
         "mobydock",
         "Mountpoint",
