--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -83,6 +83,7 @@
         "percpu",
         "Pids",
         "privs",
+        "rechunk",
         "Refail",
         "registrytoken",
         "resolv",
@@ -113,10 +114,12 @@
         "ulong",
         "undici",
         "unlockkey",
+        "Untar",
         "usermode",
         "usernamespace",
         "userns",
         "ushort",
+        "ustar",
         "VTEP",
         "VXLAN",
         "WORKDIR",
