test running with sudo

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -117,11 +117,11 @@ jobs:
         uses: ./.github/actions/setup-node
 
       - if: startsWith(matrix.platform-variant, 'bun')
-        run: bun run test
+        run: sudo -E bun run test
       - if: startsWith(matrix.platform-variant, 'deno')
-        run: deno run test
+        run: sudo -E deno run test
       - if: startsWith(matrix.platform-variant, 'node')
-        run: pnpm test
+        run: sudo -E pnpm test
 
   # https://github.com/orgs/community/discussions/26822
   pr-can-merge:
