--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -6,7 +6,9 @@ on:
 
 concurrency:
   group: "pages"
-  cancel-in-progress: false
+  cancel-in-progress: true
+
+permissions: {}
 
 jobs:
   build:
@@ -17,20 +19,13 @@ jobs:
       - uses: actions/setup-node@v4
         with:
           node-version: "18.x"
+
       - name: "Install pnpm"
         uses: pnpm/action-setup@v4
-        with:
-          run_install: false
-      - run: echo "STORE_PATH=$(pnpm store path --silent)" >> $GITHUB_ENV
-      - name: "Setup pnpm cache"
-        uses: actions/cache@v4
-        with:
-          path: ${{ env.STORE_PATH }}
-          key: ${{ runner.os }}-node18.x-pnpm-store-${{ hashFiles('**/pnpm-lock.yaml') }}
-          restore-keys: |
-            ${{ runner.os }}-pnpm-store-
+
       - run: pnpm install
       - run: pnpm docgen
+
       - uses: actions/configure-pages@v5
       - uses: actions/jekyll-build-pages@v1
         with:
