update deno ci command

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -119,7 +119,7 @@ jobs:
       - if: startsWith(matrix.platform-variant, 'bun')
         run: bun run test
       - if: startsWith(matrix.platform-variant, 'deno')
-        run: deno run test
+        run: deno task test
       - if: startsWith(matrix.platform-variant, 'node')
         run: pnpm test
 
