--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -126,6 +126,10 @@ jobs:
       - if: startsWith(matrix.platform-variant, 'deno')
         run: deno task test --watch=false
 
+        # FIXME: remove
+      - if: ${{ failure() }}
+        uses: mxschmitt/action-tmate@v3
+
   # https://github.com/orgs/community/discussions/26822
   pr-can-merge:
     if: ${{ always() }}
