--- a/.github/workflows/lab.yml
+++ b/.github/workflows/lab.yml
@@ -17,5 +17,8 @@ jobs:
       - run: pnpm check
       - run: pnpm build
       - run: pnpm lint
-      - uses: mxschmitt/action-tmate@v3
-        if: ${{ always() }}
+
+      - if: ${{ always() }}
+        uses: mxschmitt/action-tmate@v3
+        with:
+          limit-access-to-actor: true
