--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -33,6 +33,7 @@
         "docgen",
         "dockerode",
         "Domainname",
+        "downcasting",
         "dprint",
         "endport",
         "etwlogs",
@@ -115,6 +116,7 @@
         "undici",
         "unlockkey",
         "Untar",
+        "Upcasting",
         "usermode",
         "usernamespace",
         "userns",
