--- a/package.json
+++ b/package.json
@@ -42,68 +42,65 @@
         "coverage": "vitest --coverage",
         "lint": "eslint .",
         "schemagen": "pnpm build-reflection && pnpm build-schemas",
-        "test": "vitest"
+        "test": "vitest",
+        "update-blobs": "tsx ./scripts/update-blobs.ts"
     },
     "devDependencies": {
-        "@babel/cli": "7.25.6",
-        "@babel/core": "7.25.2",
-        "@babel/plugin-transform-export-namespace-from": "7.24.7",
-        "@babel/plugin-transform-modules-commonjs": "7.24.8",
+        "@babel/cli": "7.25.7",
+        "@babel/core": "7.25.7",
+        "@babel/plugin-transform-export-namespace-from": "7.25.7",
+        "@babel/plugin-transform-modules-commonjs": "7.25.7",
         "@effect/build-utils": "0.7.8",
-        "@effect/cli": "0.45.2",
+        "@effect/cli": "0.47.1",
         "@effect/docgen": "0.4.5",
         "@effect/eslint-plugin": "0.2.0",
-        "@effect/experimental": "0.27.3",
+        "@effect/experimental": "0.29.1",
         "@effect/language-service": "0.1.0",
-        "@effect/platform": "0.66.2",
-        "@effect/platform-browser": "0.45.2",
-        "@effect/platform-node": "0.61.3",
-        "@effect/printer": "0.36.4",
-        "@effect/printer-ansi": "0.36.4",
-        "@effect/schema": "0.74.1",
-        "@effect/typeclass": "0.27.4",
-        "@effect/vitest": "0.10.4",
-        "@types/node": "22.7.2",
+        "@effect/platform": "0.68.1",
+        "@effect/platform-browser": "0.47.1",
+        "@effect/platform-node": "0.63.1",
+        "@effect/printer": "0.37.1",
+        "@effect/printer-ansi": "0.37.1",
+        "@effect/schema": "0.75.2",
+        "@effect/typeclass": "0.28.1",
+        "@effect/vitest": "0.12.0",
+        "@types/node": "22.7.5",
         "@types/ssh2": "1.15.1",
-        "@types/tar-fs": "2.0.4",
-        "@typescript-eslint/eslint-plugin": "8.7.0",
-        "@typescript-eslint/parser": "8.7.0",
-        "@typescript-eslint/utils": "8.7.0",
-        "@vitest/coverage-v8": "2.1.1",
+        "@typescript-eslint/eslint-plugin": "8.8.1",
+        "@typescript-eslint/parser": "8.8.1",
+        "@vitest/coverage-v8": "2.1.2",
         "babel-plugin-annotate-pure-calls": "0.4.0",
-        "effect": "3.8.4",
-        "eslint": "8.57.1",
+        "effect": "3.9.1",
+        "eslint": "9.12.0",
         "eslint-config-prettier": "9.1.0",
         "eslint-import-resolver-typescript": "3.6.3",
         "eslint-plugin-codegen": "0.29.0",
-        "eslint-plugin-deprecation": "3.0.0",
-        "eslint-plugin-import": "2.30.0",
+        "eslint-plugin-import": "2.31.0",
         "eslint-plugin-prettier": "5.2.1",
         "eslint-plugin-sort-destructure-keys": "2.0.0",
         "fast-check": "3.22.0",
         "prettier": "3.3.3",
         "prettier-plugin-jsdoc": "1.3.0",
-        "prettier-plugin-packagejson": "2.5.2",
+        "prettier-plugin-packagejson": "2.5.3",
         "rimraf": "6.0.1",
         "tsx": "4.19.1",
-        "typescript": "5.6.2",
+        "typescript": "5.6.3",
         "vite": "5.4.8",
-        "vitest": "2.1.1"
+        "vitest": "2.1.2"
     },
     "peerDependencies": {
-        "@effect/experimental": "0.27.3",
-        "@effect/platform": "0.66.2",
-        "@effect/schema": "0.74.1",
-        "effect": "3.8.4"
+        "@effect/experimental": "0.29.1",
+        "@effect/platform": "0.68.1",
+        "@effect/schema": "0.75.2",
+        "effect": "3.9.1"
     },
     "optionalDependencies": {
-        "@effect/platform-browser": "0.45.2",
-        "@effect/platform-node": "0.61.3",
+        "@effect/platform-browser": "0.47.1",
+        "@effect/platform-node": "0.63.1",
         "ssh2": "^1.16.0",
-        "tar-fs": "^3.0.6",
-        "undici": "^6.19.8"
+        "undici": "^6.20.0"
     },
-    "packageManager": "pnpm@9.11.0",
+    "packageManager": "pnpm@9.12.1",
     "engines": {
         "node": ">=18.0.0"
     },
