--- a/package.json
+++ b/package.json
@@ -86,7 +86,8 @@
         "tsx": "4.19.1",
         "typescript": "5.6.3",
         "vite": "5.4.8",
-        "vitest": "2.1.2"
+        "vitest": "2.1.2",
+        "ws": "8.18.0"
     },
     "peerDependencies": {
         "@effect/experimental": "0.29.2",
@@ -98,7 +99,8 @@
         "@effect/platform-browser": "0.47.2",
         "@effect/platform-node": "0.63.2",
         "ssh2": "^1.16.0",
-        "undici": "^6.20.0"
+        "undici": "^6.20.0",
+        "ws": "^8.18.0"
     },
     "packageManager": "pnpm@9.12.1",
     "engines": {
