--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -12,9 +12,9 @@
         "moduleResolution": "NodeNext",
         "lib": ["ES2022"],
         "isolatedModules": true,
-        "noImplicitReturns": false,
+        "noImplicitReturns": true,
         "noUnusedLocals": true,
-        "noUnusedParameters": false,
+        "noUnusedParameters": true,
         "noFallthroughCasesInSwitch": true,
         "noEmitOnError": false,
         "noErrorTruncation": false,
