--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "the-moby-effect",
-    "version": "1.45.0-alpha.8",
+    "version": "1.45.0-alpha.9",
     "description": "Moby/Docker API client built using effect-ts",
     "keywords": [
         "moby",
@@ -109,7 +109,7 @@
     "publishConfig": {
         "access": "public",
         "directory": "dist",
-        "provenance": true
+        "provenance": false
     },
     "pnpm": {
         "patchedDependencies": {
