--- a/package.json
+++ b/package.json
@@ -51,23 +51,27 @@
         "@babel/plugin-transform-export-namespace-from": "7.25.8",
         "@babel/plugin-transform-modules-commonjs": "7.25.7",
         "@effect/build-utils": "0.7.8",
-        "@effect/cli": "0.47.4",
+        "@effect/cli": "0.47.5",
         "@effect/docgen": "0.4.5",
         "@effect/eslint-plugin": "0.2.0",
-        "@effect/experimental": "0.29.4",
+        "@effect/experimental": "0.29.5",
         "@effect/language-service": "0.2.0",
-        "@effect/platform": "0.68.4",
-        "@effect/platform-browser": "0.47.2",
-        "@effect/platform-node": "0.63.2",
+        "@effect/platform": "0.68.5",
+        "@effect/platform-browser": "0.47.5",
+        "@effect/platform-node": "0.63.5",
         "@effect/printer": "0.37.2",
         "@effect/printer-ansi": "0.37.2",
         "@effect/schema": "0.75.4",
         "@effect/typeclass": "0.28.2",
         "@effect/vitest": "0.12.1",
+        "@eslint/compat": "1.2.0",
+        "@eslint/eslintrc": "3.1.0",
+        "@eslint/js": "9.12.0",
         "@types/node": "22.7.5",
         "@types/ssh2": "1.15.1",
         "@typescript-eslint/eslint-plugin": "8.9.0",
         "@typescript-eslint/parser": "8.9.0",
+        "@typescript-eslint/utils": "8.9.0",
         "@vitest/coverage-v8": "2.1.3",
         "babel-plugin-annotate-pure-calls": "0.4.0",
         "effect": "3.9.2",
@@ -75,8 +79,8 @@
         "eslint-config-prettier": "9.1.0",
         "eslint-import-resolver-typescript": "3.6.3",
         "eslint-plugin-codegen": "0.29.0",
-        "eslint-plugin-import": "2.31.0",
         "eslint-plugin-prettier": "5.2.1",
+        "eslint-plugin-simple-import-sort": "12.1.1",
         "eslint-plugin-sort-destructure-keys": "2.0.0",
         "fast-check": "3.22.0",
         "prettier": "3.3.3",
@@ -90,14 +94,14 @@
         "ws": "8.18.0"
     },
     "peerDependencies": {
-        "@effect/experimental": "0.29.4",
-        "@effect/platform": "0.68.4",
+        "@effect/experimental": "0.29.5",
+        "@effect/platform": "0.68.5",
         "@effect/schema": "0.75.4",
         "effect": "3.9.2"
     },
     "optionalDependencies": {
-        "@effect/platform-browser": "0.47.2",
-        "@effect/platform-node": "0.63.2",
+        "@effect/platform-browser": "0.47.5",
+        "@effect/platform-node": "0.63.5",
         "ssh2": "^1.16.0",
         "undici": "^6.20.1",
         "ws": "^8.18.0"
@@ -113,7 +117,8 @@
     },
     "pnpm": {
         "patchedDependencies": {
-            "@effect/build-utils@0.7.8": "patches/@effect__build-utils@0.7.8.patch"
+            "@effect/build-utils@0.7.8": "patches/@effect__build-utils@0.7.8.patch",
+            "babel-plugin-annotate-pure-calls@0.4.0": "patches/babel-plugin-annotate-pure-calls@0.4.0.patch"
         }
     }
 }
