--- a/.github/workflows/lab.yml
+++ b/.github/workflows/lab.yml
@@ -15,8 +15,8 @@ jobs:
       - uses: pnpm/action-setup@v4
       - run: pnpm install
       - run: pnpm check
-      - run: pnpm build
-      - run: pnpm lint
+      # - run: pnpm build
+      # - run: pnpm lint
 
       - if: ${{ always() }}
         uses: mxschmitt/action-tmate@v3
