--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -16,6 +16,7 @@
         "Cgroupns",
         "cgroups",
         "codegen",
+        "compat",
         "Conforti",
         "conta",
         "containerd",
