--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
         "build-reflection": "(cd reflection/ && go build)",
         "build-schemas": "(cd src && rm -rf ./generated && mkdir -p generated && ../reflection/reflection) && eslint ./src/generated/ --fix",
         "check": "tsc -b tsconfig.json",
+        "circular": "node ./scripts/circular.js",
         "clean": "rimraf .tsbuildinfo docs build dist coverage",
         "codegen": "build-utils prepare-v2",
         "coverage": "vitest --coverage",
@@ -83,6 +84,8 @@
         "eslint-plugin-simple-import-sort": "12.1.1",
         "eslint-plugin-sort-destructure-keys": "2.0.0",
         "fast-check": "3.22.0",
+        "glob": "11.0.0",
+        "madge": "8.0.0",
         "prettier": "3.3.3",
         "prettier-plugin-jsdoc": "1.3.0",
         "prettier-plugin-packagejson": "2.5.3",
