--- a/.github/workflows/lab.yml
+++ b/.github/workflows/lab.yml
@@ -29,6 +29,7 @@ jobs:
       - run: pnpm check
       - run: pnpm build
       - run: pnpm lint
+      - run: pnpm circular
 
       - if: ${{ always() }}
         uses: mxschmitt/action-tmate@v3
