add my username to dictionary

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -17,6 +17,7 @@
         "cgroups",
         "codegen",
         "compat",
+        "confo",
         "Conforti",
         "conta",
         "containerd",
