--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -29,6 +29,7 @@
         "Datacenter",
         "Demux",
         "demuxing",
+        "Deno",
         "devcontainers",
         "dind",
         "dnsrr",
