fixup websocket layer

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,6 +8,7 @@
         "behaviour",
         "Blkio",
         "buildargs",
+        "buildx",
         "cachefrom",
         "cachemount",
         "CERTDIR",
