--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,16 +17,16 @@ concurrency:
 
 jobs:
   # Yes this job is really needed as you can't access the global env var outside of a job step
-  # and I want to use those global env vars to setup things like the matricies for other jobs.
-  compute-matricies:
+  # and I want to use those global env vars to setup things like the matrices for other jobs.
+  compute-matrices:
     runs-on: ubuntu-latest
     timeout-minutes: 1
     outputs:
-      platform-variants: ${{ steps.compute-matricies.outputs.platform-variants }}
-      docker-engine-versions: ${{ steps.compute-matricies.outputs.docker-engine-versions }}
-      docker-engine-connection-variants: ${{ steps.compute-matricies.outputs.docker-engine-connection-variants }}
+      platform-variants: ${{ steps.compute-matrices.outputs.platform-variants }}
+      docker-engine-versions: ${{ steps.compute-matrices.outputs.docker-engine-versions }}
+      docker-engine-connection-variants: ${{ steps.compute-matrices.outputs.docker-engine-connection-variants }}
     steps:
-      - id: compute-matricies
+      - id: compute-matrices
         run: |
           echo "platform-variants=${{ env.platform-variants }}" >> $GITHUB_OUTPUT
           echo "docker-engine-versions=${{ env.docker-engine-versions }}" >> $GITHUB_OUTPUT
@@ -51,11 +51,11 @@ jobs:
   # Checks that the docker images build and publishes them to ghcr.io
   docker-build:
     runs-on: ubuntu-latest
-    needs: [compute-matricies]
+    needs: [compute-matrices]
     timeout-minutes: 10
     strategy:
       matrix:
-        dockerfile: ${{ fromJSON(needs.compute-matricies.outputs.docker-engine-connection-variants) }}
+        dockerfile: ${{ fromJSON(needs.compute-matrices.outputs.docker-engine-connection-variants) }}
     permissions:
       contents: read
       packages: write
@@ -85,7 +85,7 @@ jobs:
           platforms: linux/amd64,linux/arm64,linux/arm/v7,linux/arm/v6
 
   docker-engine-tests:
-    needs: [compute-matricies, typescript-build, docker-build]
+    needs: [compute-matrices, typescript-build, docker-build]
     runs-on: ubuntu-latest
     timeout-minutes: 10
     defaults:
@@ -94,9 +94,9 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        platform-variant: ${{ fromJSON(needs.compute-matricies.outputs.platform-variants) }}
-        docker-engine-version: ${{ fromJSON(needs.compute-matricies.outputs.docker-engine-versions) }}
-        docker-engine-connection-variant: ${{ fromJSON(needs.compute-matricies.outputs.docker-engine-connection-variants) }}
+        platform-variant: ${{ fromJSON(needs.compute-matrices.outputs.platform-variants) }}
+        docker-engine-version: ${{ fromJSON(needs.compute-matrices.outputs.docker-engine-versions) }}
+        docker-engine-connection-variant: ${{ fromJSON(needs.compute-matrices.outputs.docker-engine-connection-variants) }}
     env:
       __PLATFORM_VARIANT: ${{ matrix.platform-variant }}
       __DOCKER_ENGINE_VERSION: ${{ matrix.docker-engine-version }}
