--- a/package.json
+++ b/package.json
@@ -48,61 +48,62 @@
     },
     "devDependencies": {
         "@babel/cli": "7.25.9",
-        "@babel/core": "7.25.9",
+        "@babel/core": "7.26.0",
         "@babel/plugin-transform-export-namespace-from": "7.25.9",
         "@babel/plugin-transform-modules-commonjs": "7.25.9",
         "@effect/build-utils": "0.7.8",
-        "@effect/cli": "0.48.6",
-        "@effect/docgen": "0.4.5",
+        "@effect/cli": "0.48.25",
+        "@effect/docgen": "0.5.0",
         "@effect/eslint-plugin": "0.2.0",
         "@effect/language-service": "0.2.0",
-        "@effect/platform": "0.69.6",
+        "@effect/platform": "0.69.25",
         "@effect/platform-browser": "0.48.5",
         "@effect/platform-node": "0.64.6",
-        "@effect/printer": "0.38.2",
-        "@effect/printer-ansi": "0.38.2",
-        "@effect/typeclass": "0.29.2",
-        "@effect/vitest": "0.13.2",
-        "@eslint/compat": "1.2.1",
-        "@eslint/eslintrc": "3.1.0",
-        "@eslint/js": "9.13.0",
-        "@types/node": "22.7.9",
+        "@effect/printer": "0.38.16",
+        "@effect/printer-ansi": "0.38.16",
+        "@effect/typeclass": "0.29.16",
+        "@effect/vitest": "0.13.16",
+        "@eslint/compat": "1.2.3",
+        "@eslint/eslintrc": "3.2.0",
+        "@eslint/js": "9.15.0",
+        "@types/node": "22.9.1",
         "@types/ssh2": "1.15.1",
-        "@typescript-eslint/eslint-plugin": "8.11.0",
-        "@typescript-eslint/parser": "8.11.0",
-        "@typescript-eslint/utils": "8.11.0",
-        "@vitest/coverage-v8": "2.1.3",
+        "@types/ws": "8.5.13",
+        "@typescript-eslint/eslint-plugin": "8.15.0",
+        "@typescript-eslint/parser": "8.15.0",
+        "@typescript-eslint/utils": "8.15.0",
+        "@vitest/coverage-v8": "2.1.5",
         "babel-plugin-annotate-pure-calls": "0.4.0",
-        "effect": "3.10.2",
-        "eslint": "9.13.0",
+        "effect": "3.10.16",
+        "eslint": "9.15.0",
         "eslint-config-prettier": "9.1.0",
         "eslint-import-resolver-typescript": "3.6.3",
         "eslint-plugin-codegen": "0.29.0",
         "eslint-plugin-prettier": "5.2.1",
         "eslint-plugin-simple-import-sort": "12.1.1",
         "eslint-plugin-sort-destructure-keys": "2.0.0",
-        "fast-check": "3.22.0",
+        "fast-check": "3.23.1",
         "glob": "11.0.0",
         "madge": "8.0.0",
         "prettier": "3.3.3",
         "prettier-plugin-jsdoc": "1.3.0",
-        "prettier-plugin-packagejson": "2.5.3",
+        "prettier-plugin-packagejson": "2.5.5",
         "rimraf": "6.0.1",
-        "tsx": "4.19.1",
+        "tsx": "4.19.2",
         "typescript": "5.6.3",
-        "vite": "5.4.10",
-        "vitest": "2.1.3",
+        "vite": "5.4.11",
+        "vitest": "2.1.5",
         "ws": "8.18.0"
     },
     "peerDependencies": {
-        "@effect/platform": "0.69.6",
-        "effect": "3.10.2"
+        "@effect/platform": "0.69.25",
+        "effect": "3.10.16"
     },
     "optionalDependencies": {
-        "@effect/platform-browser": "0.48.6",
-        "@effect/platform-node": "0.64.7",
+        "@effect/platform-browser": "0.48.25",
+        "@effect/platform-node": "0.64.27",
         "ssh2": "^1.16.0",
-        "undici": "^6.20.1",
+        "undici": "^6.21.0",
         "ws": "^8.18.0"
     },
     "packageManager": "pnpm@9.12.2",
