--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,6 +9,7 @@
         "Blkio",
         "buildargs",
         "buildx",
+        "bunx",
         "cachefrom",
         "cachemount",
         "CERTDIR",
@@ -126,6 +127,7 @@
         "userns",
         "ushort",
         "ustar",
+        "vitest",
         "VTEP",
         "VXLAN",
         "WORKDIR",
