--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -123,11 +123,11 @@ jobs:
       - if: startsWith(matrix.platform-variant, 'bun')
         uses: ./.github/actions/setup-bun
       - if: startsWith(matrix.platform-variant, 'bun') && !startsWith(matrix.docker-engine-connection-variant, 'socket')
-        run: bun run test
+        run: bunx --bun vitest
       - if: startsWith(matrix.platform-variant, 'bun') && startsWith(matrix.docker-engine-connection-variant, 'socket')
         run: |
           sudo -E npm install -g bun
-          sudo -E bun run test
+          sudo -E bunx --bun vitest
 
       - if: startsWith(matrix.platform-variant, 'deno')
         uses: ./.github/actions/setup-deno
@@ -135,8 +135,8 @@ jobs:
         run: deno task test --watch=false
       - if: startsWith(matrix.platform-variant, 'deno') && startsWith(matrix.docker-engine-connection-variant, 'socket')
         run: |
-          sudo -E curl -fsSL https://deno.land/install.sh | sh
-          sudo -E deno task test --watch=false
+          curl -fsSL https://deno.land/install.sh | sh
+          deno task test --watch=false
 
   # https://github.com/orgs/community/discussions/26822
   pr-can-merge:
