--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
         "@effect/language-service": "0.2.0",
         "@effect/platform": "0.69.25",
         "@effect/platform-browser": "0.48.5",
+        "@effect/platform-bun": "0.49.27",
         "@effect/platform-node": "0.64.6",
         "@effect/printer": "0.38.16",
         "@effect/printer-ansi": "0.38.16",
@@ -101,6 +102,7 @@
     },
     "optionalDependencies": {
         "@effect/platform-browser": "0.48.25",
+        "@effect/platform-bun": "0.49.27",
         "@effect/platform-node": "0.64.27",
         "ssh2": "^1.16.0",
         "undici": "^6.21.0",
