--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -123,11 +123,13 @@ jobs:
       - if: startsWith(matrix.platform-variant, 'bun')
         uses: ./.github/actions/setup-bun
       - if: startsWith(matrix.platform-variant, 'bun') && !startsWith(matrix.docker-engine-connection-variant, 'socket')
-        run: bunx --bun vitest
+        run: bunx vitest
       - if: startsWith(matrix.platform-variant, 'bun') && startsWith(matrix.docker-engine-connection-variant, 'socket')
         run: |
           sudo -E npm install -g bun
-          sudo -E bunx --bun vitest
+          sudo -E bunx vitest
+          # https://github.com/oven-sh/bun/issues/4145
+          # sudo -E bunx --bun vitest
 
       - if: startsWith(matrix.platform-variant, 'deno')
         uses: ./.github/actions/setup-deno
