--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -18,6 +18,7 @@
         "Cgroupns",
         "cgroups",
         "codegen",
+        "codemods",
         "compat",
         "confo",
         "Conforti",
@@ -56,6 +57,7 @@
         "identitytoken",
         "IPAM",
         "janedoe",
+        "jscodeshift",
         "jsonmessage",
         "kernelmode",
         "kmem",
