--- a/package.json
+++ b/package.json
@@ -52,31 +52,31 @@
         "@babel/plugin-transform-export-namespace-from": "7.25.9",
         "@babel/plugin-transform-modules-commonjs": "7.25.9",
         "@effect/build-utils": "0.7.8",
-        "@effect/cli": "0.48.25",
-        "@effect/docgen": "0.5.0",
+        "@effect/cli": "0.48.31",
+        "@effect/docgen": "0.5.1",
         "@effect/eslint-plugin": "0.2.0",
         "@effect/language-service": "0.2.0",
-        "@effect/platform": "0.69.25",
-        "@effect/platform-browser": "0.48.5",
-        "@effect/platform-bun": "0.49.27",
-        "@effect/platform-node": "0.64.6",
-        "@effect/printer": "0.38.16",
-        "@effect/printer-ansi": "0.38.16",
-        "@effect/typeclass": "0.29.16",
-        "@effect/vitest": "0.13.16",
+        "@effect/platform": "0.69.31",
+        "@effect/platform-browser": "0.48.31",
+        "@effect/platform-bun": "0.49.33",
+        "@effect/platform-node": "0.64.33",
+        "@effect/printer": "0.38.19",
+        "@effect/printer-ansi": "0.38.19",
+        "@effect/typeclass": "0.29.19",
+        "@effect/vitest": "0.13.19",
         "@eslint/compat": "1.2.3",
         "@eslint/eslintrc": "3.2.0",
-        "@eslint/js": "9.15.0",
-        "@types/node": "22.9.1",
+        "@eslint/js": "9.16.0",
+        "@types/node": "22.10.1",
         "@types/ssh2": "1.15.1",
         "@types/ws": "8.5.13",
-        "@typescript-eslint/eslint-plugin": "8.15.0",
-        "@typescript-eslint/parser": "8.15.0",
-        "@typescript-eslint/utils": "8.15.0",
-        "@vitest/coverage-v8": "2.1.5",
+        "@typescript-eslint/eslint-plugin": "8.16.0",
+        "@typescript-eslint/parser": "8.16.0",
+        "@typescript-eslint/utils": "8.16.0",
+        "@vitest/coverage-v8": "2.1.6",
         "babel-plugin-annotate-pure-calls": "0.4.0",
-        "effect": "3.10.16",
-        "eslint": "9.15.0",
+        "effect": "3.10.19",
+        "eslint": "9.16.0",
         "eslint-config-prettier": "9.1.0",
         "eslint-import-resolver-typescript": "3.6.3",
         "eslint-plugin-codegen": "0.29.0",
@@ -86,29 +86,31 @@
         "fast-check": "3.23.1",
         "glob": "11.0.0",
         "madge": "8.0.0",
-        "prettier": "3.3.3",
+        "prettier": "3.4.1",
         "prettier-plugin-jsdoc": "1.3.0",
-        "prettier-plugin-packagejson": "2.5.5",
+        "prettier-plugin-packagejson": "2.5.6",
         "rimraf": "6.0.1",
+        "ssh2": "1.16.0",
         "tsx": "4.19.2",
-        "typescript": "5.6.3",
-        "vite": "5.4.11",
-        "vitest": "2.1.5",
+        "typescript": "5.7.2",
+        "undici": "7.0.0",
+        "vite": "6.0.1",
+        "vitest": "2.1.6",
         "ws": "8.18.0"
     },
     "peerDependencies": {
-        "@effect/platform": "0.69.25",
-        "effect": "3.10.16"
+        "@effect/platform": "0.69.30",
+        "effect": "3.10.19"
     },
     "optionalDependencies": {
-        "@effect/platform-browser": "0.48.25",
-        "@effect/platform-bun": "0.49.27",
-        "@effect/platform-node": "0.64.27",
+        "@effect/platform-browser": "0.48.31",
+        "@effect/platform-bun": "0.49.33",
+        "@effect/platform-node": "0.64.33",
         "ssh2": "^1.16.0",
-        "undici": "^6.21.0",
+        "undici": "^7.0.0",
         "ws": "^8.18.0"
     },
-    "packageManager": "pnpm@9.12.2",
+    "packageManager": "pnpm@9.14.4",
     "engines": {
         "node": ">=18.0.0"
     },
@@ -118,6 +120,9 @@
         "provenance": false
     },
     "pnpm": {
+        "overrides": {
+            "undici": "^7.0.0"
+        },
         "patchedDependencies": {
             "@effect/build-utils@0.7.8": "patches/@effect__build-utils@0.7.8.patch",
             "babel-plugin-annotate-pure-calls@0.4.0": "patches/babel-plugin-annotate-pure-calls@0.4.0.patch"
