--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,49 +1,138 @@
-# This file is a template, and might need editing before it works on your project.
-# This is a sample GitLab CI/CD configuration file that should run without any modifications.
-# It demonstrates a basic 3 stage CI/CD pipeline. Instead of real tests or scripts,
-# it uses echo commands to simulate the pipeline execution.
-#
-# A pipeline is composed of independent jobs that run scripts, grouped into stages.
-# Stages run in sequential order, but jobs within stages run in parallel.
-#
-# For more information, see: https://docs.gitlab.com/ee/ci/yaml/index.html#stages
-#
-# You can copy and paste this template into a new `.gitlab-ci.yml` file.
-# You should not add this template to an existing `.gitlab-ci.yml` file by using the `include:` keyword.
-#
-# To contribute improvements to CI/CD templates, please follow the Development guide at:
-# https://docs.gitlab.com/ee/development/cicd/templates.html
-# This specific template is located at:
-# https://gitlab.com/gitlab-org/gitlab/-/blob/master/lib/gitlab/ci/templates/Getting-Started.gitlab-ci.yml
+variables:
+  DOCKER_ENGINE_CONNECTION_VARIANTS: '["ssh", "http", "https", "socket"]'
+  PLATFORM_VARIANTS: '["node-18.x", "node-20.x", "node-22.x", "bun", "deno", "node-18.x-undici", "node-20.x-undici", "node-22.x-undici", "bun-undici", "deno-undici"]'
+  DOCKER_ENGINE_VERSIONS: '["docker.io/library/docker:23-dind-rootless", "docker.io/library/docker:24-dind-rootless", "docker.io/library/docker:25-dind-rootless", "docker.io/library/docker:26-dind-rootless", "docker.io/library/docker:27-dind-rootless"]'
 
-stages:          # List of stages for jobs, and their order of execution
-  - build
-  - test
-  - deploy
+stages:
+  - typescript-build
 
-build-job:       # This job runs in the build stage, which runs first.
+# Workflow settings
+# workflow:
+#   rules:
+#     - if: $CI_PIPELINE_SOURCE == "push" && $CI_COMMIT_BRANCH == "main"
+#     - if: $CI_PIPELINE_SOURCE == "merge_request_event"
+
+# Configure pipeline-level concurrency
+# Note: GitLab handles concurrency differently from GitHub
+# cancel_outdated_pipelines:
+#   stage: .pre
+#   script:
+#     - echo "Canceling outdated pipelines..."
+#   rules:
+#     - if: '$CI_PIPELINE_SOURCE == "merge_request_event"'
+#       when: always
+#   tags:
+#     - linux
+
+typescript-build:
   stage: build
+  image: node:20
+  timeout: 10 minutes
   script:
-    - echo "Compiling the code..."
-    - echo "Compile complete."
+    - npm install -g pnpm
+    - pnpm install
+    - pnpm check
+    - pnpm build
+    - pnpm lint
+    - pnpm circular
+# docker-build:
+#   image: docker:latest
+#   stage: build
+#   services:
+#     - docker:dind
+#   parallel:
+#     matrix:
+#       - DOCKERFILE: $DOCKER_ENGINE_CONNECTION_VARIANTS
+#   variables:
+#     DOCKER_HOST: tcp://docker:2375
+#     DOCKER_TLS_CERTDIR: ""
+#   before_script:
+#     - docker login -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD $CI_REGISTRY
+#   script:
+#     - |
+#       DOCKERFILE_PATH="docker/dind-${DOCKERFILE}.dockerfile"
+#       docker buildx create --use
+#       docker buildx build \
+#         --platform linux/amd64,linux/arm64,linux/arm/v7,linux/arm/v6 \
+#         --cache-from type=registry,ref=$CI_REGISTRY_IMAGE:cache \
+#         --cache-to type=registry,ref=$CI_REGISTRY_IMAGE:cache,mode=max \
+#         --tag $CI_REGISTRY_IMAGE/${DOCKERFILE}-dind:$CI_COMMIT_SHA \
+#         --file $DOCKERFILE_PATH \
+#         --build-arg DIND_BASE_IMAGE=docker.io/library/docker:dind \
+#         --push .
+#   timeout: 10 minutes
+#   tags:
+#     - linux
 
-unit-test-job:   # This job runs in the test stage.
-  stage: test    # It only starts when the job in the build stage completes successfully.
-  script:
-    - echo "Running unit tests... This will take about 60 seconds."
-    - sleep 60
-    - echo "Code coverage is 90%"
+# docker-engine-tests:
+#   parallel:
+#     matrix:
+#       - PLATFORM_VARIANT: $PLATFORM_VARIANTS
+#         DOCKER_ENGINE_VERSION: $DOCKER_ENGINE_VERSIONS
+#         CONNECTION_VARIANT: $DOCKER_ENGINE_CONNECTION_VARIANTS
+#   stage: test
+#   variables:
+#     __PLATFORM_VARIANT: $PLATFORM_VARIANT
+#     __DOCKER_ENGINE_VERSION: $DOCKER_ENGINE_VERSION
+#     __CONNECTION_VARIANT: $CONNECTION_VARIANT
+#   before_script:
+#     - docker login -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD $CI_REGISTRY
+#     - docker pull $DOCKER_ENGINE_VERSION
+#   script:
+#     - |
+#       if [[ $PLATFORM_VARIANT == node* ]]; then
+#         # Setup Node.js environment
+#         curl -fsSL https://fnm.vercel.app/install | bash
+#         export PATH="/root/.local/share/fnm:$PATH"
+#         eval "$(fnm env)"
+#         fnm install ${PLATFORM_VARIANT#node-}
+#         npm install -g pnpm
 
-lint-test-job:   # This job also runs in the test stage.
-  stage: test    # It can run at the same time as unit-test-job (in parallel).
-  script:
-    - echo "Linting code... This will take about 10 seconds."
-    - sleep 10
-    - echo "No lint issues found."
+#         if [[ $CONNECTION_VARIANT == socket ]]; then
+#           sudo -E pnpm test
+#         else
+#           pnpm test
+#         fi
+#       elif [[ $PLATFORM_VARIANT == bun* ]]; then
+#         # Setup Bun environment
+#         curl -fsSL https://bun.sh/install | bash
+#         export BUN_INSTALL="/root/.bun"
+#         export PATH="$BUN_INSTALL/bin:$PATH"
 
-deploy-job:      # This job runs in the deploy stage.
-  stage: deploy  # It only runs when *both* jobs in the test stage complete successfully.
-  environment: production
-  script:
-    - echo "Deploying application..."
-    - echo "Application successfully deployed."
+#         if [[ $CONNECTION_VARIANT == socket ]]; then
+#           sudo -E bunx vitest
+#         else
+#           bunx vitest
+#         fi
+#       elif [[ $PLATFORM_VARIANT == deno* ]]; then
+#         # Setup Deno environment
+#         curl -fsSL https://deno.land/install.sh | sh
+#         export DENO_INSTALL="/root/.deno"
+#         export PATH="$DENO_INSTALL/bin:$PATH"
+
+#         if [[ $CONNECTION_VARIANT == socket ]]; then
+#           sudo -E deno task test --watch=false
+#         else
+#           deno task test --watch=false
+#         fi
+#       fi
+#   timeout: 10 minutes
+#   needs:
+#     - typescript-build
+#     - docker-build
+#   tags:
+#     - linux
+
+# merge-check:
+#   stage: .post
+#   script:
+#     - |
+#       if [[ "$CI_PIPELINE_STATUS" != "success" ]]; then
+#         echo "Pipeline failed or was canceled"
+#         exit 1
+#       fi
+#   rules:
+#     - if: '$CI_PIPELINE_SOURCE == "merge_request_event"'
+#       when: always
+#   tags:
+#     - linux
