--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,7 +4,7 @@ variables:
   DOCKER_ENGINE_VERSIONS: '["docker.io/library/docker:23-dind-rootless", "docker.io/library/docker:24-dind-rootless", "docker.io/library/docker:25-dind-rootless", "docker.io/library/docker:26-dind-rootless", "docker.io/library/docker:27-dind-rootless"]'
 
 stages:
-  - typescript-build
+  - build
 
 # Workflow settings
 # workflow:
