--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -25,7 +25,8 @@
                 "mutantdino.resourcemonitor",
                 "GitHub.vscode-github-actions",
                 "yoavbls.pretty-ts-errors",
-                "GitLab.gitlab-workflow"
+                "GitLab.gitlab-workflow",
+                "redhat.vscode-yaml"
             ],
             "settings": {
                 "cSpell.enabled": true,
