--- a/renovate.json
+++ b/renovate.json
@@ -12,6 +12,15 @@
             "groupSlug": "effect-node",
             "matchDatasources": ["npm"],
             "matchPackageNames": ["@effect/**", "effect"]
+        },
+        {
+            "matchUpdateTypes": ["minor", "patch"],
+            "matchCurrentVersion": "!/^0/",
+            "automerge": true
         }
-    ]
+    ],
+    "lockFileMaintenance": {
+        "enabled": true,
+        "automerge": true
+    }
 }
