--- a/package.json
+++ b/package.json
@@ -48,54 +48,54 @@
     },
     "devDependencies": {
         "@babel/cli": "7.26.4",
-        "@babel/core": "7.26.0",
+        "@babel/core": "7.26.7",
         "@babel/plugin-transform-export-namespace-from": "7.25.9",
         "@babel/plugin-transform-modules-commonjs": "7.26.3",
         "@effect/build-utils": "0.7.8",
-        "@effect/cli": "0.51.1",
+        "@effect/cli": "0.54.1",
         "@effect/docgen": "0.5.2",
         "@effect/eslint-plugin": "0.2.0",
         "@effect/language-service": "0.2.0",
-        "@effect/platform": "0.72.1",
-        "@effect/platform-browser": "0.51.1",
-        "@effect/platform-bun": "0.52.1",
-        "@effect/platform-node": "0.68.1",
-        "@effect/printer": "0.40.1",
-        "@effect/printer-ansi": "0.40.1",
-        "@effect/typeclass": "0.31.1",
-        "@effect/vitest": "0.16.1",
-        "@eslint/compat": "1.2.4",
+        "@effect/platform": "0.75.1",
+        "@effect/platform-browser": "0.54.1",
+        "@effect/platform-bun": "0.55.1",
+        "@effect/platform-node": "0.71.1",
+        "@effect/printer": "0.40.7",
+        "@effect/printer-ansi": "0.40.7",
+        "@effect/typeclass": "0.31.7",
+        "@effect/vitest": "0.17.3",
+        "@eslint/compat": "1.2.6",
         "@eslint/eslintrc": "3.2.0",
-        "@eslint/js": "9.17.0",
-        "@types/node": "22.10.5",
-        "@types/ssh2": "1.15.3",
-        "@types/ws": "8.5.13",
-        "@typescript-eslint/eslint-plugin": "8.19.0",
-        "@typescript-eslint/parser": "8.19.0",
-        "@typescript-eslint/utils": "8.19.0",
-        "@vitest/coverage-v8": "2.1.8",
-        "babel-plugin-annotate-pure-calls": "0.4.0",
-        "effect": "3.12.1",
-        "eslint": "9.17.0",
-        "eslint-config-prettier": "9.1.0",
+        "@eslint/js": "9.19.0",
+        "@types/node": "22.13.0",
+        "@types/ssh2": "1.15.4",
+        "@types/ws": "8.5.14",
+        "@typescript-eslint/eslint-plugin": "8.23.0",
+        "@typescript-eslint/parser": "8.23.0",
+        "@typescript-eslint/utils": "8.23.0",
+        "@vitest/coverage-v8": "2.1.9",
+        "babel-plugin-annotate-pure-calls": "0.5.0",
+        "effect": "3.12.7",
+        "eslint": "9.19.0",
+        "eslint-config-prettier": "10.0.1",
         "eslint-import-resolver-typescript": "3.7.0",
         "eslint-plugin-codegen": "0.29.0",
-        "eslint-plugin-prettier": "5.2.1",
+        "eslint-plugin-prettier": "5.2.3",
         "eslint-plugin-simple-import-sort": "12.1.1",
         "eslint-plugin-sort-destructure-keys": "2.0.0",
         "fast-check": "3.23.2",
-        "glob": "11.0.0",
+        "glob": "11.0.1",
         "madge": "8.0.0",
         "prettier": "3.4.2",
         "prettier-plugin-jsdoc": "1.3.2",
-        "prettier-plugin-packagejson": "2.5.6",
+        "prettier-plugin-packagejson": "2.5.8",
         "rimraf": "6.0.1",
         "ssh2": "1.16.0",
         "tsx": "4.19.2",
-        "typescript": "5.7.2",
+        "typescript": "5.7.3",
         "undici": "7.2.0",
-        "vite": "6.0.7",
-        "vitest": "2.1.8",
+        "vite": "6.0.11",
+        "vitest": "2.1.9",
         "ws": "8.18.0"
     },
     "peerDependencies": {
@@ -103,14 +103,14 @@
         "effect": "3.12.1"
     },
     "optionalDependencies": {
-        "@effect/platform-browser": "0.51.1",
-        "@effect/platform-bun": "0.52.1",
-        "@effect/platform-node": "0.68.1",
+        "@effect/platform-browser": "0.54.1",
+        "@effect/platform-bun": "0.55.1",
+        "@effect/platform-node": "0.71.1",
         "ssh2": "^1.16.0",
-        "undici": "^7.2.0",
+        "undici": "^7.3.0",
         "ws": "^8.18.0"
     },
-    "packageManager": "pnpm@9.14.4",
+    "packageManager": "pnpm@9.15.5",
     "engines": {
         "node": ">=18.0.0"
     },
@@ -121,8 +121,7 @@
     },
     "pnpm": {
         "patchedDependencies": {
-            "@effect/build-utils@0.7.8": "patches/@effect__build-utils@0.7.8.patch",
-            "babel-plugin-annotate-pure-calls@0.4.0": "patches/babel-plugin-annotate-pure-calls@0.4.0.patch"
+            "@effect/build-utils@0.7.8": "patches/@effect__build-utils@0.7.8.patch"
         }
     }
 }
