update renovate config

--- a/renovate.json
+++ b/renovate.json
@@ -8,19 +8,23 @@
     "packageRules": [
         {
             "description": "Group @effect Node.JS packages together",
-            "groupName": "Effect",
-            "groupSlug": "effect-node",
+            "groupName": "Effect-ts",
+            "groupSlug": "effect-ts",
             "matchDatasources": ["npm"],
             "matchPackageNames": ["@effect/**", "effect"]
         },
         {
             "matchUpdateTypes": ["minor", "patch"],
             "matchCurrentVersion": "!/^0/",
-            "automerge": true
+            "automerge": true,
+            "automergeType": "pr",
+            "platformAutomerge": true
         }
     ],
     "lockFileMaintenance": {
         "enabled": true,
-        "automerge": true
+        "automerge": true,
+        "automergeType": "pr",
+        "platformAutomerge": true
     }
 }
